[ADD] purchase_indonesia : add due_date color , change location by location in employee

--- a/purchase_indonesia/views/inherit_purchase_order.xml
+++ b/purchase_indonesia/views/inherit_purchase_order.xml
@@ -15,7 +15,8 @@
                  <xpath expr="//field[@name='partner_id']" position="before">
                           <field name="po_no" string="Name" invisible="1"/>
                           <field name="companys_id" string="Company" invisible="0" required="0" options="{'no_create_edit': True}"/>
-                          <field name="type_location" string="Location"/>
+                          <field name="type_location" string="Location" invisible="1"/>
+                          <field name="location" string="Location"/>
                  </xpath>
                  <xpath expr="//field[@name='date_order']" position="after">
                           <field name="source_purchase_request" string="Source Purchase Request" />
