--- a/purchase_indonesia/views/inherit_purchase_tender.xml
+++ b/purchase_indonesia/views/inherit_purchase_tender.xml
@@ -39,10 +39,6 @@
                             invisible="1"/>
                  </xpath>
 
-                 <xpath expr="//field[@name='user_id']" position="after">
-                     <field name="pic_id" string="PIC" readonly="1"/>
-                 </xpath>
-
                  <xpath expr="//field[@name='origin']" position="after">
                      <field name="request_id" readonly="1" string="No PP"/>
                  </xpath>
@@ -53,11 +49,13 @@
 
                  <xpath expr="//field[@name='schedule_date']" position="after">
                      <field name="due_date" string="Due Date" attrs="{'readonly': [('state','not in',('draft'))]}"/>
+                     <field name="validation_due_date" invisible="1"/>
                  </xpath>
 
                  <xpath expr="//field[@name='user_id']" position="after">
                      <field name="companys_id" string="Company" attrs="{'readonly': [('state','not in',('draft'))]}"/>
-                     <field name="type_location" string="Location" attrs="{'readonly': [('state','not in',('draft'))]}"/>
+                     <field name="type_location" string="Location" invisible="1"/>
+                     <field name="location" string="Location" attrs="{'readonly': [('state','not in',('draft'))]}"/>
                  </xpath>
                  <xpath expr="//tree/field[@name='product_qty']" position="after">
                            <field name="qty_received" class="oe_inline" invisible="0"
@@ -85,6 +83,17 @@
              </field>
          </record>
 
+        <record model="ir.ui.view" id="inherit_purchase_requisition_tree">
+             <field name="name">Inherit purchase requisition Tree</field>
+             <field name="model">purchase.requisition</field>
+             <field name="inherit_id" ref="purchase_requisition.view_purchase_requisition_tree"/>
+             <field name="arch" type="xml">
+                 <xpath expr="//tree" position="attributes">
+                          <attribute name='colors'>red:validation_due_date==True</attribute>
+                 </xpath>
+             </field>
+         </record>
+
         <record model="ir.ui.view" id="view_form_inherit_purchase_requisition_tree">
              <field name="name">Inherit Purchase Requisition Tree</field>
              <field name="model">purchase.requisition</field>
@@ -95,6 +104,7 @@
                  </xpath>
                  <xpath expr="//field[@name='ordering_date']" position="after">
                      <field name="due_date" string="Due Date"/>
+                     <field name="validation_due_date" invisible="1"/>
                  </xpath>
 
              </field>
