--- a/purchase_indonesia/views/inherit_purchase_request.xml
+++ b/purchase_indonesia/views/inherit_purchase_request.xml
@@ -9,6 +9,10 @@
                       <field name="type_location" string="Location"/>
                       <field name="type_functional" string="Unit Functional" required="1"/>
                       <field name="department_id" string="Department" required="1" options="{'no_create_edit': True}"/>
+                      <field name="type_budget" widget="radio" string="Budget" attrs="{'invisible': [('state','not in', ['budget','approval3','approval4','approval5','approval6'])]}"/>
+                      <field name="pta_code" string="PTA Reference"
+                             attrs="{'invisible': [('state','not in', ['budget','approval3','approval4','approval5','approval6'])]}"/>
+                      <field name="currency_id" invisible="1"/>
                       <field name="employee_id" string="Employee" invisible="1" required="0" options="{'no_create_edit': True}"/>
                  </xpath>
              </field>
@@ -66,7 +70,7 @@
                  <xpath expr="//field[@name='line_ids']//tree//field[@name='analytic_account_id']" position="after">
                      <field name="validation_budget" invisible="1"/>
                      <field name="budget_available" string="Budget Available"
-                                 attrs="{'readonly': [('validation_budget','!=',True)]}"/>
+                                 attrs="{'invisible':[('validation_budget','!=',True)],'readonly': [('validation_budget','!=',True)]}"/>
                  </xpath>
              </field>
          </record>
@@ -92,7 +96,7 @@
                  <xpath expr="//field[@name='line_ids']//form//field[@name='analytic_account_id']" position="after">
                      <field name="validation_budget" invisible="1"/>
                      <field name="budget_available" string="Budget Available"
-                                 attrs="{'readonly': [('validation_budget','!=',True)]}"/>
+                                 attrs="{'invisible':[('validation_budget','!=',True)],'readonly': [('validation_budget','!=',True)]}"/>
                  </xpath>
              </field>
          </record>
@@ -203,14 +207,6 @@
                      <button name="print_purchase_request" string="Print PR/PP" type="object" states="approved" groups="purchase_request.group_purchase_request_procstaff"/>
                  </xpath>
 
-                 <xpath expr="//field[@name='description']" position="after">
-                     <group name="budget">
-                          <field name="type_budget" widget="radio" string="Budget" attrs="{'invisible': [('state','not in', ['budget','approval3','approval4','approval5','approval6'])]}"/>
-                          <field name="pta_code" string="PTA Reference"
-                                 attrs="{'invisible': [('type_budget','!=', 'not'),('state','not in', ['budget','approval3','approval4','approval5','approval6'])]}"/>
-                          <field name="currency_id" invisible="1"/>
-                     </group>
-                 </xpath>
                  <xpath expr="//field[@name='description']" position="before">
                      <group class="oe_subtotal_footer oe_right">
                             <div class="oe_subtotal_footer_separator oe_inline">
