--- a/purchase_indonesia/views/quotation_comparison.xml
+++ b/purchase_indonesia/views/quotation_comparison.xml
@@ -49,7 +49,7 @@
                      <header coolspan="10">
                             <button name="action_send" states="draft"  type="object" string="Send QCF" class="oe_highlight" groups="purchase_request.group_purchase_request_procstaff"/>
                             <button name="action_confirm" states="confirm" type="object" string="Confirm" class="oe_highlight" groups="purchase_request.group_purchase_request_procstaff"/>
-                            <button name="action_approve" states="approve" type="object" string="Approval Finance" class="oe_highlight" groups="purchase_request.group_purchase_request_finance_procurement"/>
+                            <button name="action_approve" states="approve" type="object" string="Approval Finance" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_finance_procurement"/>
                             <button name="action_approve1" states="approve1"  type="object" string="Approval GM" class="oe_highlight" groups="purchase_request.group_purchase_request_div_head"/>
                             <button name="action_approve2" states="approve2" type="object" string="Approval Director" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_director"/>
                             <button name="action_approve3" states="approve3"  type="object" string="Approval President Director" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_president_director"/>
@@ -583,6 +583,13 @@
         <menuitem  id="purchase.menu_procurement_partner_contact_form"
                   action="purchase.product_normal_action_puchased"
           parent="purchase.menu_procurement_management" sequence="21"/>
+
+        <menuitem
+            id="menu_quotation_comparison1_act"
+            sequence="11"
+            parent="purchase_request.menu_purchase_request"
+            action="quotation_comparison_action"
+            />
 
         <menuitem
             id="menu_quotation_comparison_act"
