--- a/purchase_indonesia/views/procur_return_view.xml
+++ b/purchase_indonesia/views/procur_return_view.xml
@@ -22,6 +22,10 @@
             <field name="arch" type="xml">
                 <form>
                      <header coolspan="10">
+                            <button name="button_send_return" states="draft" string="Send Good Return" class="oe_highlight" />
+                            <button name="button_confirm_return" states="confirm" string="Confirm" class="oe_highlight" groups="stock.group_stock_manager"/>
+                            <button name="%(action_good_return_reject)d" states="confirm" string="Reject Goods Return" type="action" groups="stock.group_stock_manager"/>
+                            <button name="button_cancel" states="draft" string="Cancel"/>
                             <field name="state" widget="statusbar" statusbar_visible="draft,confirm,done"/>
                      </header>
                     <sheet>
