--- a/purchase_indonesia/views/procur_return_view.xml
+++ b/purchase_indonesia/views/procur_return_view.xml
@@ -42,6 +42,8 @@
                                  <group>
                                      <field name="company_id" string="Company" options="{'no_create_edit': True}"
                                             attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}"/>
+                                     <field name="request_id" string="BPB No" options="{'no_create_edit': True}"
+                                            attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}"/>
                                      <field name="division_id" string="Division" options="{'no_create_edit': True}"
                                             attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}"/>
                                      <field name="requester_id" string="Requester" options="{'no_create_edit': True}"
@@ -84,7 +86,6 @@
                     <field name="code_product" string="Product Code"/>
                     <field name="product_id" string="Product" options="{'no_create_edit': True}"/>
                     <field name="uom_id" string="UOM" options="{'no_create_edit': True}"/>
-                    <field name="request_id" string="BPB" options="{'no_create_edit': True}"/>
                     <field name="product_qty" string="Qty Return"/>
                     <field name="code" string="COA"/>
                     <field name="block_id" string="Block" options="{'no_create_edit': True}"/>
